<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Popular Movies App Stage 2</string>
    <string name="original_title">Original Title</string>
    <string name="detail_release_date">Release Date</string>
    <string name="vote_average">Viewer Rating</string>
    <string name="plot_synopsis">Plot</string>

    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="movie_thumb_image">Movie Thumb Image</string>

    <string name="pref_sort_popular">Most Popular</string>
    <string name="pref_sort_rating">Highest Rating</string>
    <string name="pref_sort_key">Sort Key</string>
    <string name="pref_sort_favorite">Favorite</string>

    <string name="movie_review">Reviews</string>
    <string name="movie_trailers">Trailers</string>
    <string name="movie_trailer">Trailer</string>
    <string name="favorite_heart">String Heart</string>
    <string name="youtube_logo">YouTube Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_not_saved">No favorite saved.</string>

</resources>