<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="116dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:background="@color/cardview_dark_background"
                android:padding="16dp"
                android:text="@string/original_title"
                android:textColor="@color/colorWhite"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/movie_thumb_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/original_title_tv"
                android:contentDescription="@string/movie_thumb_image"
                android:padding="16dp" />

            <TextView
                android:id="@+id/release_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/original_title_tv"
                android:layout_toEndOf="@id/movie_thumb_iv"
                android:padding="8dp"
                android:text="@string/detail_release_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vote_average_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_tv"
                android:layout_toEndOf="@id/movie_thumb_iv"
                android:padding="8dp"
                android:text="@string/vote_average"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_24px"
                android:layout_below="@id/vote_average_tv"
                android:layout_toEndOf="@id/movie_thumb_iv"
                android:contentDescription="@string/favorite_heart"
                android:padding="8dp" />


            <TextView
                android:id="@+id/plot_synopsis_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_thumb_iv"
                android:padding="8dp"
                android:text="@string/plot_synopsis"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />



            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/plot_synopsis_tv"
                android:background="@color/colorGrey"
                android:visibility="visible" />

            <TextView
                android:id="@+id/movie_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/plot_synopsis_tv"
                android:text="@string/movie_trailers"
                android:textSize="16sp"
                android:paddingTop="8dp"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview_trailer"
                android:layout_below="@id/movie_trailers"
                android:scrollbars="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view2"
                android:layout_below="@id/recyclerview_trailer"
                android:background="@color/colorGrey"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviews_tv"
                android:textSize="16sp"
                android:layout_below="@+id/view2"
                android:text="@string/movie_review"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview_reviews"
                android:layout_below="@id/movie_trailers"
                android:scrollbars="vertical" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>