<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:textColor="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/original_title"
                 />

            <ImageView
                android:id="@+id/movie_thumb_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_thumb_image"
                 />

            <TextView
                android:id="@+id/release_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_release_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 />

            <!--<TextView-->
                <!--android:id="@+id/vote_average_tv"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="8dp"-->
                <!--android:text="@string/vote_average"-->
                <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />-->

            <!--<com.like.LikeButton-->
                <!--app:icon_type="heart"-->
                <!--app:icon_size="25dp"-->
                <!--app:liked="false"-->
                <!--android:layout_marginStart="-20dp"-->
                <!--android:id="@+id/heart_button"-->
                <!--android:layout_below="@id/vote_average_tv"-->
                <!--android:layout_toEndOf="@id/movie_thumb_iv"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->

            <TextView
                android:id="@+id/plot_synopsis_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot_synopsis"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                />

            <!--<TextView-->
                <!--android:id="@+id/movie_trailers"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/movie_trailers"-->
                <!--android:paddingTop="8dp"/>-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




</LinearLayout>